logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -105,7 +105,7 @@ header {
   display: none;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
   padding: 0rem !important;
   margin:0rem !important;
